--- a/tracker/src/main/resources/application.properties
+++ b/tracker/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=tracker
+server.port=8081
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/tracker
 spring.datasource.username=postgres
-spring.datasource.password=selva
+spring.datasource.password=admin
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-server.port=8081
+
+spring.session.jdbc.initialize-schema=always
