--- a/tracker/src/main/resources/application.properties
+++ b/tracker/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/tracker
 spring.datasource.username=postgres
-spring.datasource.password=selva
+spring.datasource.password=admin
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
